--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,4 @@
-# project
-_site
-.jekyll-cache
-.sass-cache
-.vagrant
-
-# general
-.DS_Store
-Thumbs.db
-ehthumbs.db
-
-Gemfile.lock
+**/application
+**/.jekyll-cache
+**/.sass-cache
+**/Gemfile.lock
